[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Deafeat_interface.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Defeat_Buttons.gd" type="Script" id=2]

[node name="Defeat_interface" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 60.0
margin_bottom = 116.0
alignment = 1

[node name="Defeat_Text_Container" type="MarginContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 60.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 40, 20 )

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/Defeat_Text_Container"]
margin_right = 60.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/Defeat_Text_Container/NinePatchRect"]
margin_right = 40.0
margin_bottom = 14.0
text = "Defeat!"

[node name="Time_Remaining_Container" type="MarginContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 60.0
margin_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 40, 20 )

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/Time_Remaining_Container"]
margin_right = 60.0
margin_bottom = 20.0

[node name="Time_Remaining_Label" type="Label" parent="VBoxContainer/Time_Remaining_Container/NinePatchRect"]
margin_right = 40.0
margin_bottom = 14.0
text = "1:00"

[node name="Points_Container" type="MarginContainer" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 60.0
margin_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 40, 20 )

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/Points_Container"]
margin_right = 60.0
margin_bottom = 20.0

[node name="Points_Earned_Label" type="Label" parent="VBoxContainer/Points_Container/NinePatchRect"]
margin_right = 40.0
margin_bottom = 14.0
text = "0"

[node name="Defeat_Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 60.0
margin_bottom = 116.0
script = ExtResource( 2 )

[node name="Retry_Button" type="Button" parent="VBoxContainer/Defeat_Buttons"]
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
text = "Retry"

[node name="Quit_Button" type="Button" parent="VBoxContainer/Defeat_Buttons"]
margin_top = 24.0
margin_right = 60.0
margin_bottom = 44.0
text = "Quit"
[connection signal="button_up" from="VBoxContainer/Defeat_Buttons/Retry_Button" to="VBoxContainer/Defeat_Buttons" method="_on_Retry_Button_button_up"]
[connection signal="button_up" from="VBoxContainer/Defeat_Buttons/Quit_Button" to="VBoxContainer/Defeat_Buttons" method="_on_Quit_Button_button_up"]
